# magicforest-libs

./: CMakeLists.txt  README.md  options.cmake
cmake/: ExtProj.cmake  libraries.json  options.cmake
cmake/abi_check/: CMakeLists.txt
